Fixing map on mobile.

--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   height: calc(100vh - 20vh - 4px);
+  position: relative;
 
   @media (max-width: 1100px) {
     display: block;
